// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodosView displays submitted todos in todos list, todos with same name can be submitted 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-4 -translate-y-12 text-primary-dark font-medium"
    data-testid="todos-view-container"
  >
    <div
      class="flex gap-2 items-end"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="ml-1"
        >
          <label
            class="font-semibold text-xl text-primary-dark cursor-pointer select-none"
            data-testid="todo-input-label"
            for="todo-input"
          >
            Todo Title
          </label>
        </div>
        <input
          class="w-60 rounded-lg border font-medium border-primary-dark focus:outline-none focus:border-accent text-base p-2 placeholder-primary-dark-disabled text-primary-dark"
          data-testid="todo-input"
          id="todo-input"
          placeholder="Enter a Todo title..."
          value=""
        />
      </div>
      <button
        class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-base p-2 rounded-lg"
        data-testid="todo-input-button"
        disabled=""
        type="button"
      >
        Submit
      </button>
    </div>
    <ul
      class="h-96 w-80 border border-primary-dark rounded-xl p-2 pr-4 overflow-y-auto bg-primary-dark-disabled flex flex-col gap-2"
      data-testid="todo-list-container"
    />
  </div>
</DocumentFragment>
`;

exports[`TodosView displays submitted todos in todos list, todos with same name can be submitted 2`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-4 -translate-y-12 text-primary-dark font-medium"
    data-testid="todos-view-container"
  >
    <div
      class="flex gap-2 items-end"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="ml-1"
        >
          <label
            class="font-semibold text-xl text-primary-dark cursor-pointer select-none"
            data-testid="todo-input-label"
            for="todo-input"
          >
            Todo Title
          </label>
        </div>
        <input
          class="w-60 rounded-lg border font-medium border-primary-dark focus:outline-none focus:border-accent text-base p-2 placeholder-primary-dark-disabled text-primary-dark"
          data-testid="todo-input"
          id="todo-input"
          placeholder="Enter a Todo title..."
          value=""
        />
      </div>
      <button
        class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-base p-2 rounded-lg"
        data-testid="todo-input-button"
        disabled=""
        type="button"
      >
        Submit
      </button>
    </div>
    <ul
      class="h-96 w-80 border border-primary-dark rounded-xl p-2 pr-4 overflow-y-auto bg-primary-dark-disabled flex flex-col gap-2"
      data-testid="todo-list-container"
    >
      <li
        class="relative border border-primary-dark rounded-lg p-2 truncate group bg-white border-primary-dark text-primary-dark"
        data-testid="todo-item"
      >
        My first todo
        <span
          class="absolute transition-opacity -translate-y-1/2 opacity-0 right-2 top-1/2 group-hover:opacity-100"
        >
          <button
            class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-xs py-1 px-1.5 rounded-md"
            data-testid="todo-complete-button"
            type="button"
          >
            Complete
          </button>
        </span>
      </li>
      <li
        class="relative border border-primary-dark rounded-lg p-2 truncate group bg-white border-primary-dark text-primary-dark"
        data-testid="todo-item"
      >
        My second todo
        <span
          class="absolute transition-opacity -translate-y-1/2 opacity-0 right-2 top-1/2 group-hover:opacity-100"
        >
          <button
            class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-xs py-1 px-1.5 rounded-md"
            data-testid="todo-complete-button"
            type="button"
          >
            Complete
          </button>
        </span>
      </li>
      <li
        class="relative border border-primary-dark rounded-lg p-2 truncate group bg-white border-primary-dark text-primary-dark"
        data-testid="todo-item"
      >
        My first todo
        <span
          class="absolute transition-opacity -translate-y-1/2 opacity-0 right-2 top-1/2 group-hover:opacity-100"
        >
          <button
            class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-xs py-1 px-1.5 rounded-md"
            data-testid="todo-complete-button"
            type="button"
          >
            Complete
          </button>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
